# Projet-CPlusPlus

./: .gitignore  BDD projet C++.xlsx  BDD_enseignants.csv  CMakeLists.txt  Cours.cpp  Cours.h  CoursLicence.cpp  Enseignant.cpp  Enseignant.h  Etudiant.cpp  Etudiant.h  EtudiantLicence.cpp  EtudiantMaster.cpp  EtudiantMaster.h  LoadBDD.sql  README.md  Universite.cpp  Universite.h  liste_cours.txt  liste_enseignants.txt  liste_etudiant_licence.txt  liste_etudiant_master.txt  main.cpp  split_text.py
BDD/: Cours.csv
BDD/CSV Originaux/: Enseignant.csv  Etudiant.csv  Notes.csv
Universite/: Universite.txt
Universite/Cours/: .txt  1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  Cours.csv
Universite/Enseignants/: 1.txt  2.txt  3.txt  Enseignant.csv
Universite/Etudiants/: 1.txt  10.txt  2.txt  23.txt  28.txt  29.txt  3.txt  30.txt  31.txt  34.txt  39.txt  4.txt  40.txt  42.txt  44.txt  45.txt  7.txt  8.txt  9.txt  EtudiantsLicence.csv  EtudiantsMaster.csv
Universite/Etudiants/Licence/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
cpp/: Cours.cpp  CoursLicence.cpp  Enseignant.cpp  Etudiant.cpp  EtudiantLicence.cpp  EtudiantMaster.cpp  Universite.cpp  main.cpp
h/: Cours.h  CoursLicence.h  Enseignant.h  Etudiant.h  EtudiantLicence.h  EtudiantMaster.h  Universite.h  structures.h
(+15 files in other folders)
